# wiredtiger-debug-tools

./: README.md  pyproject.toml
src/: main.py
src/wtd/: cli.py
