[tool.poetry]
name = "wiredtiger-debug-tools"
version = "0.1.3"
description = "Collections of tools to debug and analyze MongoDB WiredTiger files"
authors = ["Tommaso Tocci <tommaso.tocci@mongodb.com>"]
readme = "README.md"
packages = [
	{include = "wtd", from="src"},
]

[tool.poetry.scripts]
wtd = "wtd.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
click = "^8.1.7"
pymongo = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
